test/testcase/version_1/pass/playlist-namespace-two-additions.xspf
<?xml version="1.0" encoding="UTF-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/"
		xmlns:first="http://example.com/first/"
		xmlns:second="http://example.com/second/">
	<trackList />
</playlist>
