test/testcase/version_1/fail/playlist-meta-rel-missing.xspf
<?xml version="1.0" encoding="UTF-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<meta xml:base="foo">test</meta>
	<trackList />
</playlist>

